--- a/templates/show.html
+++ b/templates/show.html
@@ -48,8 +48,8 @@
             </form>
         </div>
     </nav>
-    <h2>Your probablity of having coronavirus is {{inf}}</h2>
-    {%if inf>0.5%}
+    <h2>Your probablity of having coronavirus is {{inf}}%</h2>
+    {%if inf > 0.5 %}
     <h2>Be careful</h2>
     {%else%}
     <h2>you are safe</h2>
